--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class = "center">
-        <script src="sketch.js"></script>
+        <script src="test.js"></script>
     </div>
 </body>
 </html>
